# cpp-video-processing

./: CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
libs/FFMpeg/: CMakeLists.txt  cmake_install.cmake
src/: load_frame.cpp  load_frame.hpp  main.cpp
